# solver

./: .gitignore  CMakeLists.txt  LICENSE  check.py  constraint.cpp  constraint.h  eigen_master_stiffness_equation_adaptee.cpp  eigen_master_stiffness_equation_adaptee.h  main.cpp  master_stiffness_equation.hpp  petsc_master_stiffness_equation_adaptee.cpp  petsc_master_stiffness_equation_adaptee.h  run_tests.cpp  term.hpp  test_constraint.cpp  test_eigen_master_stiffness_equation_adaptee.cpp  test_petsc_master_stiffness_equation_adaptee.cpp
